fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,13 @@ body {
 
 #sidebarMenu {
   height: 100%;
+  width: 100%;
   position: fixed;
   left: 0;
-  width: 100%;
   margin-top: 60px;
+  overflow-y: scroll;
+  scrollbar-color: #e70700;
+  scrollbar-width: thin;
   transform: translateX(-100%);
   transition: transform 250ms ease-in-out;
   background: #000;
